cmake_minimum_required(VERSION 3.21)
project(AdventOfCode2022)

set(CMAKE_CXX_STANDARD 14)

add_executable(AdventOfCode2022 main.cpp Days/Day1.cpp Days/Day1.h Days/Day2.cpp Days/Day2.h Days/Day3.cpp Days/Day3.h Days/Day4.cpp Days/Day4.h Days/Day5.cpp Days/Day5.h Days/Day6.cpp Days/Day6.h Days/Day7.cpp Days/Day7.h Days/Day8.cpp Days/Day8.h)
